--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
             <div>
                 <nav>
                     <div>
-                        <a href="#section1" id="link-section1">Section 1</a>
+                        <a href="#introduction" id="link-section1">Section 1</a>
                     </div>
                     <div>
-                        <a href="#section2" id="link-section2">Section 2</a>
+                        <a href="#interactive" id="link-section2">Section 2</a>
                     </div>
                     <div>
-                        <a href="#section3" id="link-section3">Section 3</a>
+                        <a href="#form" id="link-section3">Section 3</a>
                     </div>
                 </nav>
             </div>
         </header>
 
         <main>
-            <section class="content-section">
+            <section id="introduction" class="content-section">
                 <h2>Section 1: Introduction</h2>
                 <p>This section contains an introduction to the project.</p>
                 <button id="btn-toggle1">Toggle Info</button>
                 <div class="hidden-info">Here is some hidden information.</div>
             </section>
 
-            <section class="content-section">
+            <section id="interactive" class="content-section">
                 <h2>Section 2: Interactive Area</h2>
                 <p>Try interacting with the elements below.</p>
                 <button id="btn-change-color">Change Background Color</button>
                 <div id="color-box">Watch me change!</div>
             </section>
 
-            <section class="content-section">
+            <section id="form" class="content-section">
                 <h2>Section 3: Form Section</h2>
                 <form id="feedback-form">
                     <label for="name">Name:</label>
