chore: bits and bobs - adjustments

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </main>
 
         <footer>
-            <p>Project created for JavaScript and DOM manipulation practice.</p>
+            <p>Project improved by Tania and Rafi 👋🏻.</p>
         </footer>
 
         <script src="script.js"></script>
