--- a/index.html
+++ b/index.html
@@ -1,63 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Interactive Web Project</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <header>
-            <h1>Welcome to the Interactive Web Project</h1>
-            <div>
-                <nav>
-                    <div>
-                        <a href="#introduction" id="link-section1">Section 1</a>
-                    </div>
-                    <div>
-                        <a href="#interactive" id="link-section2">Section 2</a>
-                    </div>
-                    <div>
-                        <a href="#form" id="link-section3">Section 3</a>
-                    </div>
-                </nav>
-            </div>
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Translation</title>
+    <link rel="Stylesheet" href="./styles.css">
+</head>
+<body>
+    <h1>Emoji to Spanish Flashcards</h1>
+    <form id="categoryForm">
+        <label for="categorySelect">Choose category:</label>
+        <select id="categorySelect" name="category" required>
+            <option value="">--Select--</option>
+            <option value="animals">Animals</option>
+            <option value="foods">Foods</option>
+            <option value="numbers">Numbers</option>
+            <option value="moods">Moods</option>
+        </select>
+        <button type="submit">Start</button>
+    </form>
 
-        <main>
-            <section id="introduction" class="content-section">
-                <h2>Section 1: Introduction</h2>
-                <p>This section contains an introduction to the project.</p>
-                <button id="btn-toggle1">Toggle Info</button>
-                <div class="hidden-info">Here is some hidden information.</div>
-            </section>
-
-            <section id="interactive" class="content-section">
-                <h2>Section 2: Interactive Area</h2>
-                <p>Try interacting with the elements below.</p>
-                <button id="btn-change-color">Change Background Color</button>
-                <div id="color-box">Watch me change!</div>
-            </section>
-
-            <section id="form" class="content-section">
-                <h2>Section 3: Form Section</h2>
-                <form id="feedback-form">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" />
-
-                    <label for="feedback">Feedback:</label>
-                    <textarea id="feedback" name="feedback"></textarea>
-
-                    <button type="submit">Submit</button>
-                </form>
-                <div id="form-response"></div>
-            </section>
-        </main>
-
-        <footer>
-            <p>Project improved by Tania and Rafi 👋🏻.</p>
-        </footer>
-
-        <script src="script.js"></script>
-    </body>
+    <div id="card">?</div>
+    <script src="./script.js"></script>
+</body>
 </html>
