--- a/index.html
+++ b/index.html
@@ -1,61 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Interactive Web Project</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Spanish Cards Game</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <header>
-            <h1>Welcome to the Interactive Web Project</h1>
-            <div>
-                <nav>
-                    <div>
-                        <a href="#introduction" id="link-section1">Section 1</a>
-                    </div>
-                    <div>
-                        <a href="#interactive" id="link-section2">Section 2</a>
-                    </div>
-                    <div>
-                        <a href="#form" id="link-section3">Section 3</a>
-                    </div>
-                </nav>
-            </div>
+            <h1>Spanish Cards Game</h1>
         </header>
-
         <main>
-            <section id="introduction" class="content-section">
-                <h2>Section 1: Introduction</h2>
-                <p>This section contains an introduction to the project.</p>
-                <button id="btn-toggle1">Toggle Info</button>
-                <div class="hidden-info">Here is some hidden information.</div>
-            </section>
+            <form id="feedback-form">
+                <h2>Enter Your Name</h2>
+                <input type="text" id="nameInput" placeholder="Please type your name"/>
+                <button type="submit" id="showNameButton">Submit</button>
+            </form>
+            <div id="displayName" style="color: rgb(60, 1, 1); font-size: 30px;"></div>
 
-            <section id="interactive" class="content-section">
-                <h2>Section 2: Interactive Area</h2>
-                <p>Try interacting with the elements below.</p>
-                <button id="btn-change-color">Change Background Color</button>
-                <div id="color-box">Watch me change!</div>
-            </section>
-
-            <section id="form" class="content-section">
-                <h2>Section 3: Form Section</h2>
-                <form id="feedback-form">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" />
-
-                    <label for="feedback">Feedback:</label>
-                    <textarea id="feedback" name="feedback"></textarea>
-
-                    <button type="submit">Submit</button>
-                </form>
+            <section id="message" class="content-section">
                 <div id="form-response"></div>
+                <h2>Please select the topic you would like to practice</h2>
+                
+                    <select name="topics" id="topics">
+                        <option value="numeros">Numeros</option>
+                        <option value="animales">Animales</option>
+                        <option value="moods">Moods</option>
+                        <option value="fruits">Fruits</option>
+                    </select>
+            </section>
+
+
+            <section id="cards" class="content-section">
+
             </section>
         </main>
 
+        
         <footer>
-            <p>Project improved by Tania and Rafi 👋🏻.</p>
+            <p>Copyrights by Trish and Ivon</p>
         </footer>
 
         <script src="script.js"></script>
