add server route for all html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,32 +19,12 @@
                     <input type="text" id="nameInput" placeholder="Please type your name" name="userName"/>
                     <button type="submit" id="showNameButton">Submit</button>
                 </form>
-                <div id="displayName"></div>
-            </section>
-
-            <!-- <section id="user-choice" class="content-section">             
-                <form id="categoryForm">
-                    <label for="categorySelect">Choose category:</label>
-                    <select id="categorySelect" name="category" required>
-                        <option value="">--Select--</option>
-                        <option value="animals">Animals</option>
-                        <option value="foods">Foods</option>
-                        <option value="numbers">Numbers</option>
-                        <option value="moods">Moods</option>
-                    </select>
-                    <button type="submit">Start</button>
-                </form>
-            </section>
-
-            <section id="flashcard" class="content-section">
-                <div id="card">?</div>
-            </section> -->
-        
+            </section>        
         </main>
         <footer>
             <p>Copyrights by Trish and Ivon</p>
         </footer>
-        <script src="script.js"></script>
+        <script src="username.js"></script>
     </div>
 </body>
 </html>
