--- a/frontend/thrishala.html
+++ b/frontend/thrishala.html
@@ -29,13 +29,13 @@
 
             <section id="flashcard" class="content-section">
                 <div id="card">?</div>
-                <button id= "exit-button" onclick="location.href ='/frontend/ivon.html'">Exit the Game</button>
+                <button id= "exit-button" type="submit">Exit the Game</button>
             </section>
         </main>
         <footer>
             <p>Copyrights by Trish and Ivon</p>
         </footer>
-        <script src="script.js"></script>
+        <script src="app.js"></script>
     </div>
 </body>
 </html>
