--- a/frontend/thrishala.html
+++ b/frontend/thrishala.html
@@ -27,8 +27,14 @@
                 </form>
             </section>
 
+            <section id="mult-choice">
+                <div id="card"></div>
+                <h3>See some rhymes to relate to this Spanish word</h3>
+                <div id="rhyme">Rimas en uno, dos, tres! </div>
+            </section>
+
             <section id="flashcard" class="content-section">
-                <div id="card">?</div>
+                <!-- <div id="card">?</div> -->
                 <button id= "exit-button" type="submit">Exit the Game</button>
             </section>
         </main>
