Split frontend and backend API fetch response

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,8 +26,13 @@
             <section id="cat-api">
                 <button id="catBtn">Get a new cat!</button>
                 <img id="catImg" alt="Random Cat" width="400">
-            </section> 
+            </section>
             
+            <section id="initial-page-selection">
+                <button id= "sentencePage" type="submit">Sentence Translation</button>
+                <button id= "categoryPage" type="submit">Category Based Translation</button>
+            </section>
+
         </main>
         <footer>
             <p>Copyrights by Trish and Ivon</p>
