--- a/frontend/thrishala.html
+++ b/frontend/thrishala.html
@@ -34,7 +34,7 @@
             </section>
 
             <section id="flashcard" class="content-section">
-                <!-- <div id="card">?</div> -->
+                <div id="card">?</div>
                 <button id= "exit-button" type="submit">Exit the Game</button>
             </section>
         </main>
